--- a/setup.cfg
+++ b/setup.cfg
@@ -17,4 +17,10 @@ classifiers =
 packages = find:
 python_requires = >=3.8
 install_requires =
+    setuptools==65.5.0
+    citylearn==1.8.0
+    ipywidgets==8.1.1
+    matplotlib==3.8.0
+    seaborn==0.12.2
     stable_baselines3
+    shimmy>=0.2.1
