wroking on running training

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = energy_net_MARL
+name = energy-net-MARL
 version = 0.0.0
 author = Sarah Keren
 author_email = sarahk@technion.ac.il
